fix overflow

--- a/Index/index.css
+++ b/Index/index.css
@@ -67,6 +67,8 @@ h3 {
 
 body {
     background-color: cornflowerblue;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 .image-container {
@@ -74,6 +76,5 @@ body {
 }
 
 .button {
-    transform: translateX(3000%);
     border: 3px dotted black;
 }
